...

import UIKit

class CalculatorViewController: UIViewController {
    @IBOutlet private weak var lblOutput: UILabel! {
        didSet {
            lblOutput.accessibilityIdentifier = "outputLabel"
        }
    }
	@IBOutlet private weak var lblHistory: UILabel!
	@IBOutlet private weak var btnDog: UIButton!
	@IBOutlet private weak var btnCat: UIButton!
	@IBOutlet private weak var btnChicken: UIButton!
...
